hphp/hack/test/typecheck/coroutine_constructor.php.exp
File "coroutine_constructor.php", line 4, characters 29-39:
A class constructor may not be a coroutine (NastCheck[3065])
