hphp/hack/test/typecheck/coroutine_constructor.php
<?hh // strict

class Foo {
  public coroutine function __construct() {
  }
}
